--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,8 +15,16 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
+      - name: Set up GPG
+        run: |
+          echo "$GPG_PRIVATE_KEY" > private.asc
+          gpg --import --batch private.asc
+        env:
+          GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
       - name: Build with Maven
-        run: mvn -B install --file pom.xml
+        run: mvn -B -Dgpg.passphrase=${GPG_PASSPHRASE} install --file pom.xml
+        env:
+          GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
 
   release:
     name: Draft a Release on GitHub Releases
