Implement base functionality to establish a connection to KeePassXC

--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,27 @@
       <version>1.1.2</version>
     </dependency>
 
+    <!-- Unix Domain Sockets for Java -->
+    <dependency>
+      <groupId>com.kohlschutter.junixsocket</groupId>
+      <artifactId>junixsocket-core</artifactId>
+      <version>2.3.2</version>
+    </dependency>
+
+    <!-- JSON for Java -->
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20201115</version>
+    </dependency>
+
+    <!-- Apache Commons -->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.11</version>
+    </dependency>
+
     <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
