--- a/pom.xml
+++ b/pom.xml
@@ -253,5 +253,17 @@
                 </plugins>
             </build>
         </profile>
+
+        <profile>
+            <id>deploy-github</id>
+            <distributionManagement>
+                <repository>
+                    <id>github</id>
+                    <name>GitHub Packages</name>
+                    <url>https://maven.pkg.github.com/purejava/keepassxc-proxy-access</url>
+                </repository>
+            </distributionManagement>
+        </profile>
+
     </profiles>
 </project>
