--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -11,10 +11,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 14
-        uses: actions/setup-java@v1
+      - uses: actions/setup-java@v2
         with:
-          java-version: 14
+          distribution: 'temurin'
+          java-version: '17'
+          cache: 'maven'
       - name: Set up GPG
         run: |
           echo "$GPG_PRIVATE_KEY" > private.asc
