--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,6 +14,7 @@ updates:
       maven-build-plugins:
         patterns:
           - "org.apache.maven.plugins:*"
+          - "org.sonatype.plugins:*"
       java-production-dependencies:
         patterns:
           - "*"
