Remove redundant check of sonatype plugin

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -22,6 +22,7 @@ updates:
           - "org.openjfx:*"
           - "org.apache.maven.plugins:*"
           - "org.junit.jupiter:*"
+          - "org.sonatype.plugins:*"
 
   - package-ecosystem: "github-actions"
     directory: "/" # even for `.github/workflows`
