--- a/.github/workflows/no-response.yml
+++ b/.github/workflows/no-response.yml
@@ -6,8 +6,8 @@ on:
   issue_comment:
     types: [created]
   schedule:
-    # Schedule for five minutes after the hour, every 3 hours
-    - cron: '5 */3 * * *'
+    # Schedule for 7 o'clock, every day
+    - cron: '0 7 * * *'
 
 jobs:
   noResponse:
