--- a/.github/workflows/release_to_maven.yml
+++ b/.github/workflows/release_to_maven.yml
@@ -45,6 +45,9 @@ jobs:
 
       - name: Build package
         run: ./gradlew clean build
+        env:
+          GPG_SIGNING_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
+          GPG_SIGNING_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
 
       - name: Publish package
         run: ./gradlew publishToSonatype closeSonatypeStagingRepository
