--- a/.github/workflows/release_to_maven.yml
+++ b/.github/workflows/release_to_maven.yml
@@ -42,10 +42,17 @@ jobs:
         env:
           GPG_SIGNING_KEY_PW: ${{ secrets.GPG_PASSPHRASE }}
 
-      - name: Verify Sonatype credentials
+      - name: Debug credentials
         run: |
-          echo "SONATYPE_USERNAME: ${{ secrets.NEXUS_USERNAME }}"
-          echo "SONATYPE_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}"
+          echo "SONATYPE_USERNAME length: ${#SONATYPE_USERNAME}"
+          echo "SONATYPE_PASSWORD length: ${#SONATYPE_PASSWORD}"
+          if [[ -z "$SONATYPE_USERNAME" || -z "$SONATYPE_PASSWORD" ]]; then
+            echo "Sonatype credentials are missing."
+            exit 1
+          fi
+        env:
+          SONATYPE_USERNAME: ${{ secrets.NEXUS_USERNAME }}
+          SONATYPE_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
 
       - name: Build package
         run: ./gradlew clean build
