--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ dependencies {
 }
 
 group = 'org.purejava'
-version = '1.2.8'
+version = '1.2.8-SNAPSHOT'
 description = 'A Java library to access KeePassXC via its build-in proxy.'
 java.sourceCompatibility = JavaVersion.VERSION_17
 
