--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java-library'
-    id "io.github.gradle-nexus.publish-plugin" version "2.0.0"
+    id 'io.github.gradle-nexus.publish-plugin' version '2.0.0'
     id 'maven-publish'
     id 'signing'
 }
