Use a working plugin

--- a/.github/workflows/release_to_maven.yml
+++ b/.github/workflows/release_to_maven.yml
@@ -42,7 +42,7 @@ jobs:
         run: ./gradlew clean build
 
       - name: Publish package
-        run: ./gradlew publishToSonatype
+        run: ./gradlew publishToCentralPortal
         env:
           SONATYPE_USERNAME: ${{ secrets.NEXUS_USERNAME }}
           SONATYPE_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
